# layer-playable-ads

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  claude.md  git-status.sh  pyproject.toml  requirements-prod.txt  requirements.txt  save.sh  start-nextjs.sh  start.sh  streamlit_app.py  sync.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
api/: main.py  schemas.py
api/routes/: analyze.py  build.py  demo.py  generate.py  workspace.py
docs/: IMPLEMENTATION_PLAN.md  PRD.md  REFACTOR_PLAN.md  architecture.md  changelog.md  desktop_workflow.md  feature_backlog.md  layer_api_reference.md  product_requirements.md  project_tracker.md  research_summary.md  technical_design.md  web_workflow.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
scripts/: test_layer_api.py
src/: __init__.py  app.py  app_v2.py  layer_client.py  playable_factory.py  ui_components.py
src/_archive/: app_v1.py
src/analysis/: __init__.py  game_analyzer.py  models.py
src/assembly/: __init__.py  builder.py
src/forge/: __init__.py  asset_forger.py
src/generation/: __init__.py  dynamic_game_generator.py  game_asset_generator.py  sound_generator.py
src/playable/: __init__.py  assembler.py
src/templates/: __init__.py  registry.py
src/utils/: __init__.py  helpers.py
src/vision/: __init__.py  competitor_spy.py
src/workflow/: __init__.py
tests/: __init__.py  test_assembler.py  test_asset_forger.py  test_e2e.py  test_layer_client.py
(+25 files in other folders)
